fix deprecation usage